// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace (WML Lambda) loadAuthorizationJSON should correctly parse and assign JSON properties 1`] = `
{
  "grants": [
    {
      "grants": [
        {
          "actions": [
            "action1",
          ],
          "player": "Player1",
          "tag": "Grant",
        },
      ],
      "referenceStack": [
        {
          "context": undefined,
          "key": "Room1",
          "tag": "Room",
          "universalKey": undefined,
        },
      ],
    },
  ],
  "key": "Test",
}
`;

exports[`AssetWorkspace (WML Lambda) loadJSON should correctly parse and assign JSON properties 1`] = `
{
  "components": [
    {
      "context": undefined,
      "key": "testRoom",
      "shortName": "Test Room",
      "tag": "Room",
      "universalKey": "ROOM#001",
    },
  ],
  "key": "Test",
  "metaData": [],
  "universalKey": "ASSET#Test",
}
`;

exports[`AssetWorkspace (WML Lambda) setWML should correctly parse WML input 1`] = `
{
  "components": [
    {
      "context": undefined,
      "exits": [
        {
          "description": "welcome",
          "to": "ROOM#room2",
        },
      ],
      "key": undefined,
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#room1",
    },
    {
      "context": undefined,
      "exits": [
        {
          "description": "vortex",
          "to": "ROOM#room1",
        },
      ],
      "key": undefined,
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#room2",
    },
  ],
  "key": "Test",
  "metaData": [],
  "universalKey": "ASSET#Test",
}
`;
